// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BankDetails Component render matches snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 16,
                "minHeight": 56,
                "paddingLeft": 8,
                "paddingRight": 8,
              },
              {
                "marginTop": 0,
              },
              undefined,
            ]
          }
          testID="header"
        >
          <View>
            <View
              onLayout={[Function]}
            >
              <View
                collapsable={false}
                jestAnimatedProps={
                  {
                    "value": {},
                  }
                }
                jestAnimatedStyle={
                  {
                    "value": {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  }
                }
                jestInlineStyle={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                  ]
                }
                nativeID="0"
                style={
                  [
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "borderRadius": 8,
                        "height": 32,
                        "justifyContent": "center",
                        "opacity": 1,
                        "width": 32,
                      },
                      undefined,
                    ]
                  }
                  testID="deposit-back-navbar-button"
                >
                  <SvgMock
                    fill="currentColor"
                    name="ArrowLeft"
                    style={
                      [
                        {
                          "color": "#121314",
                          "height": 24,
                          "width": 24,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "display": "flex",
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Bold",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                SEPA bank transfer
              </Text>
            </View>
          </View>
          <View>
            <View
              onLayout={[Function]}
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={2}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RNCSafeAreaView
                      edges={
                        {
                          "bottom": "additive",
                          "left": "additive",
                          "right": "additive",
                          "top": "off",
                        }
                      }
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                            },
                            undefined,
                          ]
                        }
                      >
                        <RCTScrollView
                          collapsable={false}
                          handlerTag={1}
                          handlerType="NativeViewGestureHandler"
                          onGestureHandlerEvent={[Function]}
                          onGestureHandlerStateChange={[Function]}
                          refreshControl={
                            <RefreshControlMock
                              colors={[Array]}
                              onRefresh={[Function]}
                              ref={[Object]}
                              refreshing={true}
                              tintColor="#121314"
                            />
                          }
                          testID="bank-details-refresh-control-scrollview"
                        >
                          <RCTRefreshControl />
                          <View>
                            <View … />
                          </View>
                        </RCTScrollView>
                        <View>
                          <View
                            style={[Array]}
                          >
                            <View … />
                          </View>
                        </View>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`BankDetails Component render matches snapshot with bank info shown 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 16,
                "minHeight": 56,
                "paddingLeft": 8,
                "paddingRight": 8,
              },
              {
                "marginTop": 0,
              },
              undefined,
            ]
          }
          testID="header"
        >
          <View>
            <View
              onLayout={[Function]}
            >
              <View
                collapsable={false}
                jestAnimatedProps={
                  {
                    "value": {},
                  }
                }
                jestAnimatedStyle={
                  {
                    "value": {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  }
                }
                jestInlineStyle={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                  ]
                }
                nativeID="1"
                style={
                  [
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "borderRadius": 8,
                        "height": 32,
                        "justifyContent": "center",
                        "opacity": 1,
                        "width": 32,
                      },
                      undefined,
                    ]
                  }
                  testID="deposit-back-navbar-button"
                >
                  <SvgMock
                    fill="currentColor"
                    name="ArrowLeft"
                    style={
                      [
                        {
                          "color": "#121314",
                          "height": 24,
                          "width": 24,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "display": "flex",
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Bold",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                SEPA bank transfer
              </Text>
            </View>
          </View>
          <View>
            <View
              onLayout={[Function]}
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={4}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RNCSafeAreaView
                      edges={
                        {
                          "bottom": "additive",
                          "left": "additive",
                          "right": "additive",
                          "top": "off",
                        }
                      }
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                            },
                            undefined,
                          ]
                        }
                      >
                        <RCTScrollView
                          collapsable={false}
                          handlerTag={3}
                          handlerType="NativeViewGestureHandler"
                          onGestureHandlerEvent={[Function]}
                          onGestureHandlerStateChange={[Function]}
                          refreshControl={
                            <RefreshControlMock
                              colors={[Array]}
                              onRefresh={[Function]}
                              ref={[Object]}
                              refreshing={false}
                              tintColor="#121314"
                            />
                          }
                          testID="bank-details-refresh-control-scrollview"
                        >
                          <RCTRefreshControl />
                          <View>
                            <View … />
                          </View>
                        </RCTScrollView>
                        <View>
                          <View
                            style={[Array]}
                          >
                            <View … />
                          </View>
                        </View>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
